# scotty

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: workflow.yml
docs/: introduction.cast  video.sh
src/: config.rs  index.rs  init.rs  main.rs  printer.rs  scotty.bash  scotty.zsh
