[package]
name = "scotty"
version = "0.3.4"
authors = ["Wouter Dullaert <wouter.dullaert@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
keywords = ["cd", "shell", "bash", "fish", "zsh"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/wdullaer/scotty"
description = "A chillingly fast dir switcher using fuzzy search."

[dependencies]
clap = { version = "^4.3.2", features = ["cargo"]}
sled = "^0.34.7"
thiserror = "^1.0.40"
anyhow = "^1.0.71"
fst = "^0.4.7"
regex-automata = { version = "^0.1.10", features = ["transducer"]}
fuzzy-matcher = "0.3.7"
bincode = "^1.3.3"
log = "^0.4.18"
pretty_env_logger = "^0.5.0"
directories = "^5.0.1"
serde_json = "^1.0.96"
serde = {version = "^1.0.164", features = ["derive"]}
chrono = "^0.4.26"
tabwriter = "^1.2.1"

[dev-dependencies]
tempfile = "^3.6.0"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "scotty"
path = "src/main.rs"
